--- a/src/partials/login/login.html
+++ b/src/partials/login/login.html
@@ -1,52 +1,91 @@
-<article>
-  <div class="wrapper">
-    <svg width="20px" height="20px" class="icon-back" id="iconBack">
-      <use href="/src/images/header-home-page/sprite.svg#icon-back"></use>
-    </svg>
-    <div class="title-text">
-      <div class="title login">Login Form</div>
-      <div class="title signup">Signup Form</div>
-    </div>
-    <div class="form-container">
-      <div class="slide-controls">
-        <input type="radio" name="slide" id="login" checked />
-        <input type="radio" name="slide" id="signup" />
-        <label for="login" class="slide login">Login</label>
-        <label for="signup" class="slide signup">Signup</label>
-        <div class="slider-tab"></div>
-      </div>
-      <div class="form-inner">
-        <form action="#" class="login">
-          <div class="field">
-            <input type="text" placeholder="Email Address" required />
-          </div>
-          <div class="field">
-            <input type="password" placeholder="Password" required />
-          </div>
-          <div class="field btn">
-            <div class="btn-layer"></div>
-            <input type="submit" value="Login" />
-          </div>
-          <!-- <div class="signup-link">
-            Not a member? <a href="#" id="signupNow">Signup now</a>
-          </div> -->
-        </form>
-        <form action="#" class="signup">
-          <div class="field">
-            <input type="text" placeholder="Email Address" required />
-          </div>
-          <div class="field">
-            <input type="password" placeholder="Password" required />
-          </div>
-          <div class="field">
-            <input type="password" placeholder="Confirm password" required />
-          </div>
-          <div class="field btn">
-            <div class="btn-layer"></div>
-            <input type="submit" value="Signup" />
-          </div>
-        </form>
-      </div>
-    </div>
+<!-- <div class="forms">
+  <div class="form-signup">
+    <form id="signupForm" class="signup">
+      <input class="email" type="signup__email" placeholder="enter email" />
+      <input
+        class="signup__passsword"
+        type="password"
+        placeholder="enter password"
+      />
+      <button type="submit" class="signup__btn">Signup</button>
+    </form>
   </div>
-</article>
+  <div class="form-login">
+    <form id="loginForm" class="login">
+      <input type="email" placeholder="enter email" class="login__email" />
+      <input
+        type="password"
+        placeholder="enter passsword"
+        class="login__paswword"
+      />
+      <button type="submit" class="login__btn">Login</button>
+    </form>
+  </div>
+</div>
+<button type="button" id="signOut">Sign Out</button> -->
+
+<div class="main-wrapper">
+  <div class="card-container">
+    <div class="card">
+      <div class="login-form">
+        <div class="header">Log in</div>
+        <div class="content">
+          <form id="loginForm">
+            <div class="input-field">
+              <input type="text" placeholder="Enter Email" />
+            </div>
+            <div class="input-field">
+              <input type="password" placeholder="Enter Password" />
+            </div>
+            <div class="input-field">
+              <button class="btn btn-submit" type="submit">Log in</button>
+            </div>
+          </form>
+        </div>
+        <div class="footer">
+          Don't have an account ?
+          <button class="btn btn-rotate" id="btn-signup">Sign up</button>
+        </div>
+      </div>
+      <!-- end login-form panel -->
+      <div class="signup-form">
+        <div class="header">Sign up</div>
+        <div class="content">
+          <form id="signupForm">
+            <div class="input-field">
+              <input type="email" placeholder="Enter Email" />
+            </div>
+            <div class="input-field group">
+              <input type="password" placeholder="Enter Password" />
+              <span class="see-password">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path d="M0 0h24v24H0z" fill="none" />
+                  <path
+                    fill="#fff"
+                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
+                  />
+                </svg>
+              </span>
+            </div>
+            <div class="input-field">
+              <button class="btn btn-submit" type="submit">Get started</button>
+            </div>
+          </form>
+        </div>
+        <div class="footer">
+          <button class="btn btn-rotate" id="btn-login">
+            I have an account
+          </button>
+        </div>
+      </div>
+      <!-- end signup-form panel -->
+    </div>
+    <!-- end card -->
+  </div>
+  <!-- end card-container -->
+</div>
