--- a/src/sass/components/_login.scss
+++ b/src/sass/components/_login.scss
@@ -1,191 +1,225 @@
-.wrapper {
+.main-wrapper {
+  width: 100vw;
   overflow: hidden;
-  max-width: 390px;
-  background: #fff;
-  padding: 30px;
-  border-radius: 15px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0px 8px 43px 0px $accent-color;
-  & .title-text {
-    display: flex;
-    width: 200%;
-  }
-  & .title {
-    width: 50%;
-    font-size: 35px;
-    font-weight: 600;
-    text-align: center;
-    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  & .slide-controls {
-    position: relative;
-    display: flex;
-    height: 50px;
-    width: 100%;
-    overflow: hidden;
-    margin: 30px 0 10px 0;
-    justify-content: space-between;
-    border: 1px solid lightgrey;
-    border-radius: 15px;
-  }
-  & .form-container {
-    width: 100%;
-    overflow: hidden;
-  }
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  font-family: 'Helvetica Nueue', Arial, Verdana, sans-serif;
+  /*background:  url(https://github.com/amaury-diallo/pure-javascript-todolist-app/blob/master/blue-bg.svg) no-repeat center; */
+  background: #9d50bb; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #6e48aa,
+    #9d50bb
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #6e48aa,
+    #9d50bb
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  z-index: 0;
 }
 
-.slide-controls {
-  & .slide {
-    height: 100%;
-    width: 100%;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
-    line-height: 48px;
-    cursor: pointer;
-    z-index: 1;
-    transition: all 0.6s ease;
-  }
-  & label.signup {
-    color: #000;
-  }
-  & .slider-tab {
-    position: absolute;
-    height: 100%;
-    width: 50%;
-    left: 0;
-    z-index: 0;
-    border-radius: 15px;
-    background: $accent-color;
-    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
+/* entire container, keeps perspective */
+.card-container {
+  perspective: 500px;
+  margin-bottom: 30px;
 }
-
-input[type='radio'] {
-  display: none;
+/* flip the pane when hovered */
+.card-container.rotate .card {
+  transform: rotateY(180deg);
 }
-
-#signup:checked ~ .slider-tab {
-  left: 50%;
-}
-
-#signup:checked ~ label.signup {
-  color: #fff;
-  cursor: pointer;
-  user-select: none;
-}
-
-#signup:checked ~ label.login {
-  color: #000;
-}
-
-#login:checked ~ label.signup {
-  color: #000;
-}
-
-#login:checked ~ label.login {
-  cursor: pointer;
-  user-select: none;
-}
-
-.form-container {
-  & .form-inner {
-    display: flex;
-    width: 200%;
-  }
-  & .form-inner form {
-    width: 50%;
-    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-}
-
-.form-inner form .field {
-  height: 50px;
-  width: 100%;
-  margin-top: 20px;
-  & input {
-    height: 100%;
-    width: 100%;
-    outline: none;
-    padding-left: 15px;
-    border-radius: 15px;
-    border: 1px solid lightgrey;
-    border-bottom-width: 2px;
-    font-size: 17px;
-    transition: all 0.3s ease;
-    &:focus {
-      border-color: $accent-color;
-    }
-    &::placeholder {
-      color: #999;
-      transition: all 0.3s ease;
-    }
-  }
-}
-
-form .field input:focus::placeholder {
-  color: $accent-color;
-}
-.form-inner form .pass-link {
-  margin-top: 5px;
-}
-.form-inner form .signup-link {
-  text-align: center;
-  margin-top: 30px;
-}
-.form-inner form .pass-link a,
-.form-inner form .signup-link a {
-  color: $accent-color;
-  text-decoration: none;
-}
-.form-inner form .pass-link a:hover,
-.form-inner form .signup-link a:hover {
-  text-decoration: underline;
-}
-form .btn {
-  height: 50px;
-  width: 100%;
-  border-radius: 15px;
+/* flip speed goes here */
+.card {
+  transition: transform 0.85s;
+  transform-style: preserve-3d;
   position: relative;
-  overflow: hidden;
-  & .btn-layer {
-    height: 100%;
-    width: 300%;
-    position: absolute;
-    left: -100%;
-    background: $accent-color;
-    border-radius: 15px;
-    transition: all 0.4s ease;
-  }
-  &:hover .btn-layer {
-    left: 0;
-  }
-  & input[type='submit'] {
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-    position: relative;
-    background: none;
-    border: none;
-    color: #fff;
-    padding-left: 0;
-    border-radius: 15px;
-    font-size: 20px;
-    font-weight: 500;
-    cursor: pointer;
-  }
 }
 
-.icon-back {
-  &:hover {
-    fill: $accent-color;
-  }
-  &:focus {
-    fill: $accent-color;
-  }
+/* hide back of pane during swap */
+.login-form,
+.signup-form {
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  box-shadow: 0 1px 3px 2px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+}
+
+/* front pane, placed above back */
+.login-form {
+  z-index: 2;
+}
+
+/* back, initially hidden pane */
+.signup-form {
+  transform: rotateY(180deg);
+  z-index: 3;
+}
+
+/*        Style       */
+.card-container {
+  width: 300px;
+  margin: 0 auto;
+}
+
+.card {
+  background: #ffffff;
+  border-radius: 4px;
+  color: #444444;
+}
+
+.card-container,
+.login-form,
+.signup-form {
+  height: 420px;
+  border-radius: 4px;
+}
+.login-form,
+.signup-form {
+  width: 100%;
+  height: 420px;
+  border-radius: 4px;
+}
+.card .header {
+  margin: 10px;
+  padding: 10px 0 10px 0;
+  text-align: center;
+  border-bottom: 1px solid #eeeeee;
+  color: #999999;
+  text-transform: uppercase;
+  font-weight: bold;
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+    0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
+}
+.card .content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0);
+  box-shadow: none;
+  flex: 1;
+}
+.card .footer {
+  border-top: 1px solid #eeeeee;
+  color: #999999;
+  padding: 5px 0 5px 0;
+  text-align: center;
+}
+
+.btn {
+  border: none;
+  border-radius: 2px;
+  display: inline-block;
+  height: 36px;
+  line-height: 36px;
+  padding: 0 16px;
+  font-family: inherit;
+  font-weight: 100;
+  text-align: center;
+  vertical-align: middle;
+  user-select: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.btn-rotate {
+  color: #212529;
+  background-color: #ddd;
+}
+
+.btn-rotate:hover {
+  color: #212529;
+  background-color: #ccc;
+}
+
+.btn-rotate:focus {
+  outline: none;
+  border: none;
+}
+
+.btn-submit {
+  width: 50%;
+  margin: 0 auto;
+  border-radius: 20px;
+  text-transform: uppercase;
+  color: #212529;
+  font-weight: bold;
+  background-color: #809be0;
+}
+
+.btn-submit:hover {
+  color: #212529;
+  background-color: #4d8cde;
+}
+
+.btn-submit:focus {
+  outline: none;
+  border: none;
+}
+
+form {
+  width: 100%;
+}
+
+.input-field {
+  position: relative;
+  width: 90%;
+  margin: 20px auto;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-field input {
+  width: 100%;
+  max-height: 20px;
+  padding: 20px;
+  margin-bottom: 10px;
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  background-color: #a2b2de;
+  color: #fff;
+  transition: 0.4s;
+}
+
+::-webkit-input-placeholder {
+  color: #fff;
+}
+::-moz-placeholder {
+  color: #fff;
+}
+:-ms-input-placeholder {
+  color: #fff;
+}
+::-ms-input-placeholder {
+  color: #fff;
+}
+::placeholder {
+  color: #fff;
+}
+
+.input-field input:focus {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.see-password {
+  position: absolute;
+  right: 10px;
+  padding-bottom: 5px;
+  cursor: pointer;
+}
+
+.group input {
+  padding-right: 40px;
 }
